<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GroupByGenderScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9883F3"
        android:gravity="center"
        android:text="@string/cases_by_gender"
        android:textSize="35dp"/>


    <TextView
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:text="@string/MaleGroup" />

    <TextView
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:text="@string/FemaleGroup" />

    <TextView
        android:id="@+id/unknown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:text="@string/UnknownGroup" />
</LinearLayout>