<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/ButtonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/MainLogoutButton" />

        <TextView
            android:id="@+id/Brennen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StudentBrennen"
            android:gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Xavier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StudentXavier"
            android:gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/MainHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainScreenTitle"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:width="150dp"
                android:height="150dp"
                android:text="@string/GroupMonth"
                android:onClick="onclickMonthAndYear"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:width="150dp"
                android:height="150dp"
                android:text="@string/GroupHealthAuthority"
                android:onClick="onclickHealthAuthority"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/groupGenderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:height="150dp"
                android:layout_marginRight="10dp"
                android:text="@string/GroupGender"
                android:onClick="onclickGenderScreen"/>

            <Button
                android:id="@+id/groupAgeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:height="150dp"
                android:layout_marginLeft="10dp"
                android:text="@string/GroupAge"
                android:onClick="onclickAgeScreen"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>